# fast-pdf-extract

./: AGENTS.md  Cargo.toml  README.md  justfile  pyproject.toml
.github/workflows/: CI.yml  release.yml
src/: lib.rs
tests/: tests.py
tests/test_files/: bad-json.txt  debug-ar.txt  i32-box.txt  jatalia.txt  mini-pnb.txt  strike.txt
