[package]
name = "fast-pdf-extract"
version = "0.6.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fast_pdf_extract"
crate-type = ["cdylib"]

[dependencies]
mupdf = { version = "0.8.0", features = ["serde"] }
pyo3 = "0.29.0"
serde = "1.0.228"
serde_json = "1.0.150"
