[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "fast-pdf-extract"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py313"]

[dependency-groups]
dev = [
    "maturin>=1.8.2",
    "maturin-import-hook>=0.1.0",
]

